post api added with swagger docs
