# controller/character.js
@@ -42,12 +42,47 @@ const addOne = async (req, res) => {
         const createdCharacter = await contact.save()
         res.status(201).json(createdCharacter._id)
         /* #swagger.responses[201] = { 
-            description: 'Returns contact "_id" autogenerated by mongodb',
+            description: 'Returns character "_id" autogenerated by mongodb',
             schema: "63dd79bed4238c841b2794ee"
        } */
 
     } catch (e) {
         res.status(500).json({ message: e.message })
+    }
+}
+
+
+// update
+const updateOne = async (req, res) => {
+    // #swagger.tags = ['Character']
+    // #swagger.description = 'Updating a character information.'
+    // #swagger.parameters['id'] = { description: 'ID of character to be updated.' }
+    const character = Schema({
+        _id: req.params.id,
+        name: req.body.name,
+        nation: req.body.nation,
+        element: req.body.element,
+        weaponType: req.body.weaponType,
+        rarity: req.body.rarity,
+        estimatedAge: req.body.estimatedAge,
+        bonusStat: req.body.bonusStat,
+        modelType: req.body.modelType,
+    })
+    /* #swagger.parameters['character'] = {
+               in: 'body',
+               description: 'Information of a character being updated.',
+               required: true,
+               schema: { $ref: "#/definitions/Character update" }
+        } */
+    try {
+        const characterUpdated = await Schema.findByIdAndUpdate(req.params.id, { $set: character }, { new: true })
+        res.status(204).json(characterUpdated)
+        /* #swagger.responses[204] = { 
+            schema: { $ref: "#/definitions/Character document creation" },
+            description: 'Returns newly updated character information in this format' 
+       } */
+    } catch (e) {
+        return res.status(500).json({ message: e.message })
     }
 }
 
@@ -68,4 +103,4 @@ const delOne = async (req, res) => {
     }
 }
 
-module.exports = { getAll, addOne, delOne }
+module.exports = { getAll, addOne, delOne, updateOne }
