# swagger.json
@@ -82,7 +82,7 @@
         ],
         "responses": {
           "201": {
-            "description": "Returns contact \"_id\" autogenerated by mongodb",
+            "description": "Returns character \"_id\" autogenerated by mongodb",
             "schema": {
               "type": "string",
               "example": "63dd79bed4238c841b2794ee",
@@ -98,6 +98,41 @@
       }
     },
     "/character/{id}": {
+      "put": {
+        "tags": [
+          "Character"
+        ],
+        "description": "Updating a character information.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID of character to be updated."
+          },
+          {
+            "name": "character",
+            "in": "body",
+            "description": "Information of a character being updated.",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Character update"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Returns newly updated character information in this format",
+            "schema": {
+              "$ref": "#/definitions/Character document creation"
+            }
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
       "delete": {
         "tags": [
           "Character"
@@ -195,6 +230,47 @@
         }
       }
     },
+    "Character document": {
+      "type": "object",
+      "properties": {
+        "_id": {
+          "type": "string",
+          "example": "63dd835bc3c9c39c32edb7c1"
+        },
+        "name": {
+          "type": "string",
+          "example": "albedo"
+        },
+        "nation": {
+          "type": "string",
+          "example": "mondstadt"
+        },
+        "element": {
+          "type": "string",
+          "example": "geo"
+        },
+        "weaponType": {
+          "type": "string",
+          "example": "sword"
+        },
+        "estimatedAge": {
+          "type": "string",
+          "example": "18-22"
+        },
+        "rarity": {
+          "type": "string",
+          "example": "5star"
+        },
+        "bonusStat": {
+          "type": "string",
+          "example": "geo damage bonus"
+        },
+        "modelType": {
+          "type": "string",
+          "example": "medium male"
+        }
+      }
+    },
     "Character document creation": {
       "type": "object",
       "properties": {
@@ -229,6 +305,43 @@
         "modelType": {
           "type": "string",
           "example": "medium male"
+        }
+      }
+    },
+    "Character update": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "example": ""
+        },
+        "nation": {
+          "type": "string",
+          "example": ""
+        },
+        "element": {
+          "type": "string",
+          "example": ""
+        },
+        "weaponType": {
+          "type": "string",
+          "example": ""
+        },
+        "rarity": {
+          "type": "string",
+          "example": "4star or 5star"
+        },
+        "estimatedAge": {
+          "type": "string",
+          "example": ""
+        },
+        "bonusStat": {
+          "type": "string",
+          "example": ""
+        },
+        "modelType": {
+          "type": "string",
+          "example": ""
         }
       }
     },
